clang/test/BSC/Negative/OwnedStruct/access/owned-struct-static-member-function-error-case-generic.cbs
// RUN: %clang_cc1 -verify %s


owned struct A<T> {
    int a;
    int f() { return a; } // expected-error {{invalid implicit use of member 'a' in struct member function}}
};

owned struct B<T> {
    static int a;
    int f() { return a; } // expected-error {{invalid implicit use of member 'a' in struct member function}}
};

owned struct C<T>{
    int a;
    int f(C<T>* this) { return a; } // expected-error {{invalid implicit use of member 'a' in struct member function}}
};

owned struct D<T> {
    static int a;
    int f(D<T>* this) { return a; } // expected-error {{invalid implicit use of member 'a' in struct member function}}
};

owned struct E<T> {
    int f(E<T>* this) { return 0; } 
    int f1(E<T>* this) { return f(this); } // expected-error {{use of undeclared identifier 'f'}}
};

owned struct F<T> {
    int f(F<T>* this);
    int f1(F<T>* this); 
};

int F<T>::f(F<T>* this) {
    return 0;
}

int F<T>::f1(F<T>* this) {
    return f(this); // expected-error {{use of undeclared identifier 'f'}}
}
